--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,16 +1,16 @@
 {
   "dependencies": {
-    "com.unity.cinemachine": "2.9.7",
-    "com.unity.collab-proxy": "2.0.5",
+    "com.unity.cinemachine": "2.10.0",
+    "com.unity.collab-proxy": "2.3.1",
     "com.unity.feature.development": "1.0.2",
-    "com.unity.inputsystem": "1.6.1",
-    "com.unity.recorder": "4.0.1",
-    "com.unity.render-pipelines.high-definition": "15.0.6",
+    "com.unity.inputsystem": "1.8.2",
+    "com.unity.recorder": "5.1.0",
+    "com.unity.render-pipelines.high-definition": "17.0.3",
     "com.unity.terrain-tools": "5.1.0",
-    "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.8.2",
-    "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.8.0",
+    "com.unity.timeline": "1.8.6",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.visualscripting": "1.9.4",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
